--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author: Hyunwoo Lee
 navbar-links:
   Home: "https://aslla77.github.io"
   About: 
-    - Carrer: "./About/carrer"
+    - Carrer: "./About/career"
     - Resaerch Interests: "aboutme"
     - Project: "aboutme"
 #     - publication: "aboutme"
@@ -59,7 +59,7 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "aslla77@naver.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
+#   rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #   facebook: deanattali
   github: aslla77
 #   twitter: daattali
