--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author: Hyunwoo Lee
 
 navbar-links:
   Home: "https://aslla77.github.io"
-  # CV: ""
+  CV: "HW_CV.pdf"
   About: 
     - Career: "/About/career"
 #     - Resaerch Interests: "aboutme"
